iter_language/tests/corpus/invalid/queue-kinesis-conflicting-identity.iter
queue kinesis {
  stream_arn  = "arn:aws:kinesis:us-east-1:123:stream/iter-signals"
  stream_name = "iter-signals"
  region      = "us-east-1"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
